--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ temp/
 cache/
 
 # Uploaded Files (keep directory structure)
-assets/uploads/*
+# assets/uploads/*
 !assets/uploads/.gitkeep
 admin/assets/uploads/*
 !admin/assets/uploads/.gitkeep
